HCONN-22271 connect testsuite to iris-fhir and transfer testdata

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # Modules: @Basis, @Medikation, @Dokumentenaustausch, @Terminplanung, @Vitalparameter
 # select tests to run using https://cucumber.io/docs/cucumber/api/#tag-expressions, e.g.:
 # all mandatory and optional tests from basis module
-TESTS_TO_RUN=@Basis
+TESTS_TO_RUN=(@Basis and @Mandatory) or (@Medikation and @Mandatory) or (@Dokumentenaustausch and @Mandatory) or (@Terminplanung and @Mandatory) or (@Vitalparameter and @Mandatory)
+# how to run only mandatory tests... of all modules
 # all mandatory tests from basis module
 #TESTS_TO_RUN=@Basis and @Mandatory
 # all mandatory and optional tests from modules basis and medication
