--- a/testdata/medikation.yaml
+++ b/testdata/medikation.yaml
@@ -1,26 +1,26 @@
-medication-read-id: Medication-Read-Example
-medication-read-extended-id: Medication-Read-Extended-Example
-medication-read-referenced-ingredient: Medication-Read-Referenced-Ingredient-Example
-medication-update-id: Medication-Update-Original-Example
-medicationadministration-read-id: MedicationAdministration-Read-Example
-medicationadministration-read-extended-id: MedicationAdministration-Read-Extended-Example
-medicationadministration-read-rate-id: MedicationAdministration-Read-Rate-Example-Quantity
-medicationadministration-update-id: MedicationAdministration-Update-Original-Example
-medication-encounter-id: Encounter-Read-In-Progress-Example
-medication-patient-id: Patient-Read-Example
-medication-practitioner-id: Practitioner-Read-Example
-medication-condition-id: Condition-Read-Active-Example
+medication-read-id: 10001026
+medication-read-extended-id: 10001003
+medication-read-referenced-ingredient: 10001004
+medication-update-id: 10001004
+medicationadministration-read-id: 20001002
+medicationadministration-read-extended-id: 20001003
+medicationadministration-read-rate-id: 20001047
+medicationadministration-update-id: 20001004
+medication-encounter-id: FF-5895
+medication-patient-id: 100160
+medication-practitioner-id: 10022
+medication-condition-id: 10126
 medication-practitioner-identifier: 123456789
-medication-patient-identifier: X485231029
-medication-encounter-identifier: 0123456789
-medicationrequest-read-id: MedicationRequest-Read-Example
-medicationrequest-medication-id: Medication-Read-Example
-medicationrequest-read-extended-id: MedicationRequest-Read-Extended-Example
-medicationrequest-update-id: MedicationRequest-Update-Original-Example
-medicationstatement-read-id: MedicationStatement-Read-Example
-medicationstatement-read-extended-id: MedicationStatement-Read-Extended-Example
-medicationstatement-read-rate-id: MedicationStatement-Read-Rate-Example
-medicationstatement-update-id: MedicationStatement-Update-Original-Example
-subject-identifier: subject-identifier
-list-read-id: List-Read-Example
-list-update-id: List-Update-Original-Example
+medication-patient-identifier: http://orbis.app/fhir/CodeSystem/ORBISPID|1000017
+medication-encounter-identifier: 10011
+medicationrequest-read-id: 30001065
+medicationrequest-medication-id: 10001002
+medicationrequest-read-extended-id: 30001003
+medicationrequest-update-id: 30001063
+medicationstatement-read-id: 40001002
+medicationstatement-read-extended-id: 40001003
+medicationstatement-read-rate-id: 40001064
+medicationstatement-update-id: 40001004
+subject-identifier: http://orbis.app/fhir/CodeSystem/ORBISPID|1000017
+list-read-id: 10000022
+list-update-id: 10000003
