--- a/testdata/vitalparameter.yaml
+++ b/testdata/vitalparameter.yaml
@@ -1,13 +1,13 @@
-observation-read-atemfrequenz-id: Observation-Read-Atemfrequenz-Example
-observation-read-encounter-id: Encounter-Read-In-Progress-Example
-observation-read-patient-id: Patient-Read-Example
-observation-read-blutdruck-id: Observation-Read-Blutdruck-Example
-observation-read-ekg-id: Observation-Read-EKG-Example
-device-id: Example
-observation-read-gcs-id: Observation-Read-GCS-Example
-observation-read-herzfrequenz-id: Observation-Read-Herzfrequenz-Example
-observation-read-koerpergewicht-id: Observation-Read-Koerpergewicht-Example
-observation-read-koerpergroesse-id: Observation-Read-Koerpergroesse-Example
-observation-read-koerpertemperatur-id: Observation-Read-Koerpertemperatur-Example
-observation-read-kopfumfang-id: Observation-Read-Kopfumfang-Example
-observation-read-sauerstoffsaettigung-id: Observation-Read-Sauerstoffsaettigung-Example
+observation-read-atemfrequenz-id: 00000000-0000-0000-0000-000000007540
+observation-read-encounter-id: FF-5896
+observation-read-patient-id: 100160
+observation-read-blutdruck-id: 444c2b53-3a17-4e45-b030-d81fed8667a9
+observation-read-ekg-id: test
+device-id: test
+observation-read-gcs-id: 3bd83c45-c2a4-4af8-a5f2-02f7c1769291
+observation-read-herzfrequenz-id: 00000000-0000-0000-0000-0000000075ab
+observation-read-koerpergewicht-id: 00000000-0000-0000-0000-0000000075ac
+observation-read-koerpergroesse-id: 00000000-0000-0000-0000-0000000075ad
+observation-read-koerpertemperatur-id: 00000000-0000-0000-0000-0000000075ae
+observation-read-kopfumfang-id: 00000000-0000-0000-0000-0000000075af
+observation-read-sauerstoffsaettigung-id: 00000000-0000-0000-0000-0000000075b0
