--- a/testdata/basis.yaml
+++ b/testdata/basis.yaml
@@ -1,32 +1,32 @@
-account-read-id: Account-Read-Example
-account-read-identifier-system: https://test.krankenhaus.de/fhir/sid/abrechnungsnummer
-account-read-identifier-value: 0123456789
-account-read-patient-id: Account-Read-Patient-Example
-codesystem-read-id: CodeSystem-Read-Example
-condition-read-active-id: Condition-Read-Active-Example
-patient-read-id: Patient-Read-Example
-patient-read-extended-id: Patient-Read-Extended-Example
-procedure-read-id: Procedure-Read-Example
-relatedperson-read-id: RelatedPerson-Read-Example
-practitioner-read-id: Practitioner-Read-Example
-valueset-read-id: ValueSet-Read-Example
-coverage-read-private-id: Coverage-Read-Private-Example
-coverage-read-statutory-id: Coverage-Read-Statutory-Example
-patient-read-identifier-system: http://testkrankenhaus.de/fhir/sid/Patient
-patient-read-identifier-value: IdentifierValuepatient-read
-patient-update-cancellation-id: Patient-Update-Cancellation-Active-Example
-patient-update-cancellation-identifier-system: http://isiktest.gematik.de/fhir/sid/Patient
-patient-update-cancellation-identifier-value: IdentifierPatientUpdateCancellation
-patient-delete-id: Patient-Delete-Example
-encounter-read-finished-id: Encounter-Read-Finished-Example
-encounter-read-finished-identifier-system: https://test.krankenhaus.de/fhir/sid/fallnr
-encounter-read-finished-identifier-value: 0123456789
-encounter-read-in-progress-id: Encounter-Read-In-Progress-Example
-encounter-read-in-progress-identifier-system: https://test.krankenhaus.de/fhir/sid/fallnr
-encounter-read-in-progress-identifier-value: 0123456789
-encounter-read-planned-id: Encounter-Read-Planned-Example
-encounter-read-planned-identifier-system: https://test.krankenhaus.de/fhir/sid/fallnr
-encounter-read-planned-identifier-value: 0123456789
-encounter-read-planned-serviceprovider-identifier-value: 123456789
-encounter-read-in-progress-location: Location-Example
-encounter-read-in-progress-service-provider: Organization/Organization-Example
+account-read-id: F-5954
+account-read-identifier-system: http://orbis.app/fhir/CodeSystem/MedicalCaseNumber
+account-read-identifier-value: 10011
+account-read-patient-id: 100160
+codesystem-read-id: ISiKCodeSystemExample
+condition-read-active-id: 10126
+patient-read-id: 100160
+patient-read-extended-id: 100180
+procedure-read-id: 14542
+relatedperson-read-id: RR-8315
+practitioner-read-id: 10022
+valueset-read-id: ISiKValueSetExample
+coverage-read-private-id: 6416
+coverage-read-statutory-id: 6406
+patient-read-identifier-system: http://orbis.app/fhir/CodeSystem/ORBISPID
+patient-read-identifier-value: 1000017
+patient-update-cancellation-id:
+patient-update-cancellation-identifier-system:
+patient-update-cancellation-identifier-value:
+patient-delete-id:
+encounter-read-finished-id: FF-5895
+encounter-read-finished-identifier-system: http://orbis.app/fhir/CodeSystem/MedicalCaseNumber
+encounter-read-finished-identifier-value: 10011
+encounter-read-in-progress-id: FF-5896
+encounter-read-in-progress-identifier-system: http://orbis.app/fhir/CodeSystem/MedicalCaseNumber
+encounter-read-in-progress-identifier-value: 10012
+encounter-read-planned-id: FF-5897
+encounter-read-planned-identifier-system: http://orbis.app/fhir/CodeSystem/MedicalCaseNumber
+encounter-read-planned-identifier-value: 10013
+encounter-read-planned-serviceprovider-identifier-value: TEST HOSPITAL
+encounter-read-in-progress-location:
+encounter-read-in-progress-service-provider:
